@@ -53,13 +53,19 @@ class Gallery_UserDB extends Abstract_UserDB {
 		}
 
 		if (!fs_file_exists("$userDir/.htaccess")) {
-			$fd = fs_fopen("$userDir/.htaccess", "w");
-			fwrite($fd, "Order deny,allow\nDeny from all\n");
-			fclose($fd);
+			if (is_writeable($userDir)) {
+				$fd = fs_fopen("$userDir/.htaccess", "w");
+				fwrite($fd, "Order deny,allow\nDeny from all\n");
+				fclose($fd);
+			} else {
+				echo gallery_error(sprintf(_("The folder folder which contain your userinformation (%s) is not writable."), 
+								$userDir));
+				exit;
+			}
 		}
 
 
-		if (fs_file_exists("$userDir/userdb.dat")) {
+		if (fs_file_exists("$userDir/userdb.dat") && is_writeable("$userDir/userdb.dat")) {
 			$tmp = getFile("$userDir/userdb.dat");
 
 			/* 
@@ -72,6 +78,9 @@ class Gallery_UserDB extends Abstract_UserDB {
 					$this->$k = $v;
 				}
 			}
+		} else {
+			echo gallery_error(_("Your Userfile is not writeable"));
+			exit;
 		}
 
 		if (!$this->nobody) {
