@@ -1,3 +1,9 @@
+2004-07-25  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b65
+
+	* Fix: In some strange permission sets we got non fitting error messages.
+	  - When upload_tmp_dir is not in open_basedir
+	  - When userdir and /or files in it are is not writeable.
+
 2004-07-24  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b64
 
         * Fix: Redirect in multi_create_user didnt worked after successfull adding.
